--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
 </head>
+    <style type="text/css">
+        
+   p { 
+    font-size: 120%; /* Размер шрифта */
+    font-family: Verdana, Arial, Helvetica, sans-serif; /* Семейство шрифта */
+    color: #336; /* Цвет текста */
+   }
+        
+  </style>
 <body>
 <p id="p1"> </p>
 <img id="img1">
