--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
 </head>
     <style type="text/css">
+        	display: flex;
+flex-direction: column;
+align-items: flex-start;
+padding: 10px;
+
+position: relative;
+width: 320px;
+height: 568px;
         
    p { 
     font-size: 120%; /* Размер шрифта */
