--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ height: 568px;
    }
         
   </style>
-<body background="prekol.gif">
+<body background="prekol1.gif">
 <p id="p1"> </p>
 <img id="img1">
     <script>
