--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ var rand = ( randomInteger(1, 2) );
 var ava = document.getElementById('img1');
 if (rand ==1){
 document.getElementById("p1").innerHTML="Люблю!";
-ava.setAttribute('src','https://photos.google.com/album/AF1QipN29ySYAPEh3oc58sKpap6xvsQuvBvIja_Ul7o/photo/AF1QipMd9wH44U9UMyaCKuizubVnlOIXKlotzq36UBE');}
+ava.setAttribute('src','1639600002575.jpg');}
 if (rand ==2){
 document.getElementById("p1").innerHTML="Целую!";
 ava.setAttribute('src','https://resheto.net/images/mater/pozitivnye_kartinki_2.jpg');}
