--- a/index.html
+++ b/index.html
@@ -20,8 +20,17 @@ height: 568px;
     color: #336; /* Цвет текста */
    }
         
+   body {
+  background-color: lightblue;
+   background-image: url("prekol.gif");
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+   background-size: 100% 100%;
+
+}   
+        
   </style>
-<body background="prekol1.gif">
+<body>
 <p id="p1"> </p>
 <img id="img1">
     <script>
