--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ height: 568px;
         
    body {
   background-color: lightblue;
-   background-image: url("prekol.gif");
+   background-image: url("IMG_20211217_213800_791.jpg");
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: 100% 100%;
