--- a/index.html
+++ b/index.html
@@ -10,13 +10,27 @@ flex-direction: column;
 align-items: flex-start;
 
 position: relative;
-width: 320px;
-height: 568px;
+width: 390px;
+height: 844px;
         
    p { 
-    font-size: 120%; /* Размер шрифта */
-    font-family: Verdana, Arial, Helvetica, sans-serif; /* Семейство шрифта */
-    color: #336; /* Цвет текста */
+    position: absolute;
+width: 146px;
+height: 42px;
+left: calc(50% - 146px/2 + 97px);
+top: calc(50% - 42px/2 - 343px);
+
+font-family: Pacifico;
+font-style: normal;
+font-weight: normal;
+font-size: 12px;
+line-height: 21px;
+text-align: center;
+
+color: #0E0101;
+
+mix-blend-mode: normal;
+opacity: 0.5;
    }
         
    body {
