--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ var rand = min + Math.random() * (max - min)
 rand = Math.round(rand);
 return rand;
 }
-var rand = ( randomInteger(1, 2) );
+var rand = ( randomInteger(1, 13) );
 if (rand ==1){
 document.getElementById("p1").innerHTML="Люблю!";}
 if (rand ==2){
@@ -70,7 +70,7 @@ document.getElementById("p1").innerHTML="Не нюхай!";}
 if (rand ==8){
 document.getElementById("p1").innerHTML="Удачи лох!";}
 if (rand ==9){
-document.getElementById("p1").innerHTML="Путин!";}
+document.getElementById("p1").innerHTML="Hello!";}
 if (rand ==10){
 document.getElementById("p1").innerHTML="Обама!";}
 if (rand ==11){
