--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
 </head>
     <style type="text/css">
-        	display: flex;
-flex-direction: column;
-align-items: flex-start;
-
-position: relative;
+      position: absolute;
 width: 390px;
 height: 844px;
+
+background: #FFFFFF;
+mix-blend-mode: darken;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         
    p { 
     position: absolute;
