--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background-image: url("IMG_20211217_213800_791.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-size:390px, 844px;
+
 
 }   
         
