--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background-image: url("IMG_20211217_213800_791.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size:100%, 100%
+    background-size:100%, 100%;
     
 
 
