--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     background-image: url("IMG_20211217_213800_791.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: 100%, 100%;
+    background-size: cover;
     
 
 
