--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    }
         
    body {
-    background-color: lightblue;
+    background-color: #f0f0f0;
     background-image: url("IMG_20211217_213800_791.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
