--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         
   </style>
 <body>
-<p id="p1"> </p>
+<p id="p1">
+    <img src="serdtse-animatsionnaya-kartinka-0886.gif" alt="Погоди"></p>
     <script>
   
   function randomInteger(min, max) {
