--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </style>
 <body>
 <p id="p1"></p>
-<p><img src="serdtse-animatsionnaya-kartinka-0886.gif" alt="Погоди"></p>
+<h1><img src="serdtse-animatsionnaya-kartinka-0886.gif" alt="Погоди"></h1>
     <script>
   
   function randomInteger(min, max) {
