--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     mix-blend-mode: normal;
     opacity: 0.5;
    }
+   
+  #toplayer {
+    width: 100%; /* Высота слоя */
+    position: absolute;
+    bottom: 0;
+   }
         
    body {
     background-color: #f0f0f0;
@@ -36,7 +42,8 @@
   </style>
 <body>
 <p id="p1"></p>
-<h1><img src="serdtse-animatsionnaya-kartinka-0886.gif" alt="Погоди"></h1>
+<div id="toplayer">
+    <img src="serdtse-animatsionnaya-kartinka-0886.gif" alt="Погоди"></div>
     <script>
   
   function randomInteger(min, max) {
