--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     background-color: #f0f0f0;
     background-image: url("IMG_20211217_213800_791.jpg");
     background-repeat: no-repeat;
+    background-position: center center;
     background-attachment: fixed;
     background-size: cover;
     
