--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
    
   #toplayer {
     width: 120%; 
-    position: absolute;
+    position: fixed;
     bottom: 0;
+    
    }
         
    body {
