--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
    }
    
   #toplayer {
-    width: 120%; 
+    width: 150%; 
+    height: 150px
     position: fixed;
     bottom: 0;
     
@@ -55,21 +56,21 @@ return rand;
 }
 var rand = ( randomInteger(1, 13) );
 if (rand ==1){
-document.getElementById("p1").innerHTML="Люблю!";}
+document.getElementById("p1").innerHTML="Люблю тебя!";}
 if (rand ==2){
-document.getElementById("p1").innerHTML="Целую!";}
+document.getElementById("p1").innerHTML="Целую очень нежно!";}
 if (rand ==3){
 document.getElementById("p1").innerHTML="Обожаю!";}
 if (rand ==4){
-document.getElementById("p1").innerHTML="Мур мур!";}
+document.getElementById("p1").innerHTML="Хочу быть с тобой!";}
 if (rand ==5){
-document.getElementById("p1").innerHTML="Кис кис!";}
+document.getElementById("p1").innerHTML="Кис кис, ты котик, я котик!";}
 if (rand ==6){
-document.getElementById("p1").innerHTML="Нюха бебру!";}
+document.getElementById("p1").innerHTML="Твои брови просто отвал бошки!";}
 if (rand ==7){
-document.getElementById("p1").innerHTML="Не нюхай!";}
+document.getElementById("p1").innerHTML="Смотреть на тебя, отдельный вид удовольствия!";}
 if (rand ==8){
-document.getElementById("p1").innerHTML="Удачи лох!";}
+document.getElementById("p1").innerHTML="Как мне с тобой повезло!";}
 if (rand ==9){
 document.getElementById("p1").innerHTML="Hello!";}
 if (rand ==10){
