--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
    
   #toplayer {
     width: 200%;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     
    }
    #toplayer2 {
     width: 200%;
-    position: absolute;
+    position: fixed;
     bottom: 100px;
     
    }
