--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ opacity: 0.5;
     
    }
    #toplayer3 {
-position: absolute;
+position: 0 0;
 width: 10px;
 height: 10px;
 left: -85px;
@@ -62,9 +62,9 @@ top: 15px;
     <img src="gifgivecom (4).gif" alt="Погоди"></div>
 <div id="toplayer3">
     <img src="gifgivecom (1).gif" alt="Погоди"></div>
-<p id="p1"></p>
 <div id="toplayer">
     <img src="serdtse-animatsionnaya-kartinka-0886.gif" alt="Погоди"></div>
+<p id="p1"></p>
     <script>
   
   function randomInteger(min, max) {
