--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ font-weight: normal;
 font-size: 12px;
 line-height: 21px;
 text-align: center;
-color: #0E0101;
+color: #e41f1f;
 mix-blend-mode: normal;
 opacity: 0.5;
    }
