--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ opacity: 0.5;
 <div id="toplayer">
     <img src="serdtse-animatsionnaya-kartinka-0886.gif" alt="Погоди"></div>
 <div id="toplayer3">
-    <img src="Awesome-Heart-Picture.jpg" alt="Погоди"></div>
+    <img src="Awesome-Heart-Picture-removebg-preview.png" alt="Погоди"></div>
 <p id="p1"></p>
     <script>
   
