--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@ font-weight: normal;
 font-size: 12px;
 line-height: 21px;
 text-align: center;
-color: #e41f1f;
+color: #0857EF;
 mix-blend-mode: normal;
 opacity: 0.5;
+z-index:999999
    }
    
   #toplayer {
