--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ text-align: center;
 color: #0857EF;
 mix-blend-mode: normal;
 opacity: 0.5;
-z-index:999999
+z-index:999999;
    }
    
   #toplayer {
