--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ color: #0857EF;
 mix-blend-mode: normal;
 opacity: 0.5;
 z-index:999999;
+backdrop-filter: blur(4px);
+       
    }
    
   #toplayer {
