--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    position: absolute;
 width: 146px;
 height: 42px;      
-left: calc(50% - 146px/2 + 104px);
+left: calc(50% - 166px/2 + 104px);
 top: calc(50% - 42px/2 - 342px);
 font-family: Pacifico;
 font-style: normal;
@@ -17,11 +17,10 @@ font-weight: normal;
 font-size: 12px;
 line-height: 21px;
 text-align: center;
-color: #0857EF;
 mix-blend-mode: normal;
-opacity: 0.5;
-z-index:999999;
-backdrop-filter: blur(4px);
+border: 100px solid #000000;
+box-sizing: border-box;
+text-shadow: 1px 1px 1px #03FFFF;
        
    }
    
