--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ text-shadow: 1px 1px 1px #03FFFF;
    }
    
   #toplayer {
-    width: 200%;
+    width: 370px;
     position: fixed;
     bottom: 0px;
     
