--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ text-shadow: 1px 1px 1px #03FFFF;
 <div id="toplayer2">
     <img src="gifgivecom (4).gif" alt="Погоди"></div>
 <div id="toplayer">
-    <img src="serdtse-animatsionnaya-kartinka-0886 (2).gif" alt="Погоди"></div>
+    <img src="serdtse-animatsionnaya-kartinka-0886 (1) (1) (1).gif" alt="Погоди"></div>
 <div id="toplayer3">
     <img src="Awesome-Heart-Picture-removebg-preview.png" alt="Погоди"></div>
 <p id="p1"></p>
