--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ text-align: center;
 mix-blend-mode: normal;
 box-sizing: border-box;
 text-shadow: 1px 1px 1px #03FFFF;
+z-index: 15;
        
    }
    
