--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
    position: absolute;
 width: 146px;
 height: 42px;      
-left: calc(50% - 166px/2 + 104px);
-top: calc(50% - 42px/2 - 355px);
+right: 23px;
+top: 50px;
 font-family: Pacifico;
 font-style: normal;
 font-weight: normal;
